--- a/src/ASPNET.Cadastro.App/Views/Fornecedores/Delete.cshtml
+++ b/src/ASPNET.Cadastro.App/Views/Fornecedores/Delete.cshtml
@@ -6,6 +6,8 @@
 
 <h1>Delete</h1>
 
+<vc:summary></vc:summary>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>FornecedorViewModel</h4>
