--- a/src/ASPNET.Cadastro.App/Views/Fornecedores/Index.cshtml
+++ b/src/ASPNET.Cadastro.App/Views/Fornecedores/Index.cshtml
@@ -1,25 +1,23 @@
-﻿@model IEnumerable<ASPNET.Cadastro.App.ViewModels.FornecedorViewModel>
+﻿@using ASPNET.Cadastro.App.Extensions
+@model IEnumerable<ASPNET.Cadastro.App.ViewModels.FornecedorViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Fornecedores";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-info" asp-action="Create">Criar novo fornecedor</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-hover">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Documento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipoFornecedor)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Ativo)
@@ -34,18 +32,28 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
+                @this.FormataDocumento(item.TipoFornecedor,item.Documento)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoFornecedor)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Ativo)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class="text-right">
+                <a class="btn btn-warning"
+                   supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir" 
+                   asp-action="Edit" asp-route-id="@item.Id">
+                    <span class="fa fa-pen"></span>
+                </a>
+                <a class="btn btn-info"
+                   supress-by-claim-name="Fornecedor" supress-by-claim-value="Excluir"
+                   asp-action="Details" asp-route-id="@item.Id">
+                    <span class="fa fa-search"></span>
+                </a>
+                <a class="btn btn-danger" 
+                   supress-by-claim-name="Fornecedor" supress-by-claim-value="Deletar"
+                   asp-action="Delete" asp-route-id="@item.Id">
+                    <span class="fa fa-trash"></span>
+                </a>
             </td>
         </tr>
 }
